testdata/baselines/reference/submodule/conformance/resolvesWithoutExportsDiagnostic1(moduleresolution=node16).errors.txt
/node_modules/bar/index.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
/node_modules/foo/index.js(1,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== /node_modules/foo/package.json (0 errors) ====
    {
        "name": "foo",
        "version": "1.0.0",
        "main": "index.js",
        "types": "index.d.ts",
        "exports": {
            ".": {
                "import": "./index.mjs",
                "require": "./index.js"
            }
        }
    }
    
==== /node_modules/foo/index.js (1 errors) ====
    module.exports = { foo: 1 };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== /node_modules/foo/index.mjs (0 errors) ====
    export const foo = 1;
    
==== /node_modules/foo/index.d.ts (0 errors) ====
    export declare const foo: number;
    
==== /node_modules/@types/bar/package.json (0 errors) ====
    {
        "name": "@types/bar",
        "version": "1.0.0",
        "types": "index.d.ts",
        "exports": {
            ".": {
                "require": "./index.d.ts"
            }
        }
    }
    
==== /node_modules/@types/bar/index.d.ts (0 errors) ====
    export declare const bar: number;
    
==== /node_modules/bar/package.json (0 errors) ====
    {
        "name": "bar",
        "version": "1.0.0",
        "main": "index.js",
        "exports": {
            ".": {
                "import": "./index.mjs",
                "require": "./index.js"
            }
        }
    }
    
==== /node_modules/bar/index.js (1 errors) ====
    module.exports = { bar: 1 };
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== /node_modules/bar/index.mjs (0 errors) ====
    export const bar = 1;
    
==== /index.mts (0 errors) ====
    import { foo } from "foo";
    import { bar } from "bar";